based func of the sales and the look

--- a/views/add-product.html
+++ b/views/add-product.html
@@ -15,8 +15,8 @@
     <header class="main-header">
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
-                <li class="main-header__item"><a href="/">Shop</a></li>
-                <li class="main-header__item"><a class="active" href="/admin/add-product">Add Product</a></li>
+                <li class="main-header__item"><a href="/">Sales</a></li>
+                <li class="main-header__item"><a class="active" href="/admin/add-product">Check for Sales</a></li>
             </ul>
         </nav>
     </header>
@@ -24,11 +24,10 @@
     <main>
         <form class="product-form" action="/admin/add-product" method="POST">
             <div class="form-control">
-                <label for="title">Title</label>
-                <input type="text" name="title" id="title">
+                <label for="title">Click the button below to check for sales in SquareSpace</label>
             </div>
 
-            <button class="btn" type="submit">Add Product</button>
+            <button class="btn" type="submit">CHECK FOR SALES</button>
         </form>
     </main>
 </body>
