--- a/views/shop.pug
+++ b/views/shop.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title My Shop
+        title Dixon Rye Sales
         link(rel="stylesheet", href="/css/main.css")
         link(rel="stylesheet", href="/css/product.css")
     body
@@ -12,22 +12,21 @@ html(lang="en")
             nav.main-header__nav
                 ul.main-header__item-list
                     li.main-header__item
-                        a.active(href="/") Shop
+                        a.active(href="/") Sales
                     li.main-header__item
-                        a.active(href="/admin/add-product") Add Product
+                        a.active(href="/admin/add-product") Check for Sales
         main
-            if prods.length > 0
+            if sales.length > 0
                 .grid
-                    each product in prods
+                    each sale in sales
                         article.card.product-item
                             header.card__header
-                            h1.product__title #{product.title}
-                            div.card__image
-                                img(src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png", alt="A Book")
+                            h1.product__title Item Sku: #{sale.SaleLines.SaleLine[0].itemID}
+                            h1.product__title Quantity: #{sale.SaleLines.SaleLine[0].unitQuantity}
                             div.card__content
-                                h2.product__price $19.99
-                                p.product__description A very interesting book about so many even more interesting things!
+                                h2.product__price Sale Amount: #{sale.SalePayments.SalePayment.amount}
+                                p.product__description 
                             .card__actions  
-                                button.btn Add to Cart
+                                button.btn Send
             else 
-                h1 No Products
+                h1 No Sales
