change to file system

--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -24,10 +24,10 @@
     <main>
         <form class="product-form" action="/admin/add-product" method="POST">
             <div class="form-control">
-                <label for="title">Click the button below to start the product database</label>
+                <label for="title">Click the button below to check for sales in SquareSpace</label>
             </div>
 
-            <button class="btn" type="submit">START DATABASE</button>
+            <button class="btn" type="submit">INITIALIZE</button>
         </form>
         <form class="product-form" action="/admin/add-product" method="POST">
             <div class="form-control">
@@ -35,13 +35,6 @@
             </div>
 
             <button class="btn" type="submit">CHECK FOR SALES</button>
-        </form>
-        <form class="product-form" action="/admin/delete-sales" method="POST">
-            <div class="form-control">
-                <label for="title">Click this button to reset</label>
-            </div>
-
-            <button class="btn" type="submit">RESET</button>
         </form>
     </main>
 </body>
