items ordered by date created

--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -35,6 +35,15 @@
 
             <button class="btn" type="submit">Download Items</button>
         </form>
+
+        <form class="product-form" action="/admin/inventoryDate" method="POST">
+            <div class="form-control">
+                <label for="title">Click the button below to check for inventory in Lightspeed based on created date descending</label>
+            </div>
+
+            <button class="btn" type="submit">Download Items</button>
+        </form>
+
     </main>
 </body>
 
