fix product upload and find quant from sku

--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -57,6 +57,18 @@
             <button class="btn" type="submit">Check Inventory</button>
         </form>
 
+        <form class="product-form" action="/admin/compare" method="POST">
+            <div class="form-control">
+                <label for="title">Compare</label>
+                <input type="text" name="sku" id="sku">
+            </div>
+            <div class="form-control">
+                <label for="title">Click the button below to compare inventory between lightspeed and squarespace</label>
+            </div>
+
+            <button class="btn" type="submit">compare</button>
+        </form>
+
     </main>
 </body>
 
